# cocotb-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
cocotb_cpp/: __init__.py  triggers.py
examples/axil_ext/: CMakeLists.txt  pyproject.toml
examples/axil_ext/src/: axil.h  axil_bindings.cpp
examples/axil_ext/src/axil_ext/: __init__.py
examples/axil_ext/tests/: test_axil_ext.py
src/: cocotb.h  cocotb_core.cpp  cocotb_cpp_bindings.cpp  cocotb_cpp_common.h  cocotb_nanobind.h  cocotb_python_entry.cpp  cocotb_python_op.h  cocotb_python_runner.h
tests/: CMakeLists.txt  axil.sv  cmake_build.py  dff.sv  test_axil.cpp  test_axil.py  test_axil_cpp.py  test_dff.cpp  test_dff.py  test_dff_cpp.py  test_failure.cpp  test_failure.py
