[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.1",
  "cocotb @ git+https://github.com/cocotb/cocotb.git",
]
build-backend = "scikit_build_core.build"

[project]
name = "cocotb-cpp"
version = "0.1.0"
description = "cocotb-cpp runtime and nanobind bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cocotb @ git+https://github.com/cocotb/cocotb.git",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["cocotb_cpp"]
